--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,47 +4,47 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:27hsXspPtHpIehhIpvdlcFYO2IYUCHZDkx5K9d8wLDQhiQozWwKkKGMrJiaDKkvOLMOkQ8uX1ar4LuxsFkgDKKg=,iv:Mlmx4/AC1Q/oITccmyVDQWDkvHsvR0E6U1FGpAaZoT0=,tag:dnQmOx9LIsByTH9gUdMuSw==,type:comment]
-    #ENC[AES256_GCM,data:Wztt56EPb0lft7EXJ0dfT822OaDF2MvmnLLF/jJ5zoGdIG1HA/8Z9xBXQV0=,iv:HlBRJdpZ8C+cQ8DPANc4w2iAAUfoBM+vvIxjg7FqGQ0=,tag:WCMw6FeDUvbid+lF8HPgQw==,type:comment]
-    VIP: ENC[AES256_GCM,data:yjt0rKcfN+NSgPLfiw==,iv:JcRy4rcN0GPhxiPbR+EkfVAhRYCLNNk2d0jkrB14Fok=,tag:py/sVNYePK/0lOeqG0ukYQ==,type:str]
-    #ENC[AES256_GCM,data:+QkxeibbhfE2C1pgOdM0pRIpA86Hea1Fx8HE,iv:6iT2tns6Z5rqPhcFegZD/I511Q/TlzO+FrO6p0ow9S0=,tag:cNSpsI2UJpCVFHUOyJUnWw==,type:comment]
-    #ENC[AES256_GCM,data:ypuCnNzDgwdm/g3IkHBrDs93Y0rnWR75Yov7n7k7xAF9Y9LeBoZHO001IOspDk0EoQ+TcavOkZH+Z3hy5Ix9mLIXDprXaocuCNc51W+92hcaSmlEGLQ2bbA=,iv:48a49rUAaFwuW6rMOX6rRFRHAqi0rakI9dFmVCeAJIU=,tag:o7gVOrWmZrNszoL5BS26Ig==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:ZuY0s+e2cIqz0v/N8nc=,iv:/cmsQnlGVMBd+CGQeLg9RTh/lyBwX1MU+0LjH8ykhw0=,tag:JoGxgjsSOmk0VA5cclB4LA==,type:str]
-    #ENC[AES256_GCM,data:dkTw9tqMN1u9Vld2U1nDxKLuUYSFWKBJ38hw9tuJwPGaQw==,iv:JfAVdvV2BKjS3tLK/BM8xrYCOeV8nFRXpqsW6VRQWLs=,tag:WVGMCoLQlaAvalSBfis0lA==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:KEHoautHcZ7VXgw0lQ==,iv:BS68cF4ujhpujK/7nRgs/VbOqW5s97OfogQk+7NvDaI=,tag:qONiPniVWpOUDuXY/dltGg==,type:str]
-    #ENC[AES256_GCM,data:vn5xi/4bA4J/eFZ1gBKgMGD88Ld43gqusppsQf7OCCaYwlPh89bPGCvz1VZUVxo=,iv:oK0T4djvHRCyF/AFypZxrsBbd35SWGlQMVmHunrCsOY=,tag:3fcbhgR7jDAKXQuZQw61YA==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:1bnMo/5lrop7Z39cG1B5lRFWhHhvbWRewPhFgrqR4Q==,iv:1vr2PCfE8LvbrMqd57b/yhHVhrOfhYMbTbTWVuX3UbE=,tag:D5ObDqsTJnfWiOXCdchJsg==,type:str]
-    #ENC[AES256_GCM,data:glz9ZbKaQVwOqa1PDP5pU5yKSFnqlaue5MkVn3VcOp6RUvVtg77syQ4pnXMOEMTmAaGdmLIk2J4nA7xFnrdNmMfuZ0/ADuxdlQXFbxl+jB/Itw==,iv:rfpdLn19p4L02/w45pzNATzx/1VbJxRhArsFY51Ye1U=,tag:ih2157+K7Je49JxqmyEX8g==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:A7KIBanFgfxNRk5+YTWM,iv:aWmb5vwCbts9HJewM1Wq7x1uWGS5NlFEBOLsuGtTPhY=,tag:80QV1KykyshGJ+PcntCkVg==,type:str]
-    #ENC[AES256_GCM,data:vHIjIgev3RzVWXrvF6vbfr+nqsilQls36oALslwGIVC0,iv:4pFojh9OHmUoUXg7wV2n+rl6QxxMq5k75bpYCWY7Gt0=,tag:dKMpE79MzkLZzM6UUQvUQg==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:WqPCRiLRxheUeChZhzZU,iv:SjH1ATwHFLOZvCn0C1hrGJOKEAXUrfo//kIyMLmrf0Q=,tag:EJlJJU9RTEEzDwencBBxYA==,type:str]
-    #ENC[AES256_GCM,data:2Xx7bEZj9eCfr42uqrTT79wZsyYC6fRBnaqTvcpBfpfEtSYRjMiSBTx1ROzv8Q2eXe7WRUeB35Q1AJts00z6j6qU8Wv2hxyDc8K6zViteKQ=,iv:yOvle9FKwdJSTO6DDlJoQQ+0ijzX8OlAWbTpxF8TEKg=,tag:v9qI1N48hY3SRtWs+1rw0A==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:2bV+G6re3J92zgGZ2dTg,iv:UjxUvzPZhtjnW6ar+R7OCkf9XvVZlNORKy4mNLes5YQ=,tag:D07a08/WP1XsYsDBB9YtUA==,type:str]
-    #ENC[AES256_GCM,data:2nmijIwcmP2FmCqI/dePBrvGYbU75Tz+l4TLSdxGZVvpQeyAeqLe7QkFGWDH6WUw2eY3uMQn+Bl6webgRGyY8IBJONsD5lh1HTn83vL+ZOW7106dnboV,iv:/mn+9qE1URBWo+4Gnlei9xG3tHprYojZ3pSEH682oA4=,tag:eMxaFM6MGZKNotZ6Vtq06A==,type:comment]
-    #ENC[AES256_GCM,data:gJs1vn8uyBluMSQJAABUYCw+71JdwY2yyLg+2r6BNMve9MUCBgoSKrOqN6L2HcNoaxEaSyLXX5e9l49D1XLLwel7IRlon1IOv0l3hAOgPSoqfGjxwy/gJtyhzAktXbNey0y+djNOKQ8KMe9dQtapzwUY1sstVoLzk3XWSA==,iv:/mrLmxU5KgEFagp4oSrwUKXznLkdiAIb24csQBGInmE=,tag:Lil7TyOqdlZnkm9nl9CSow==,type:comment]
-    #ENC[AES256_GCM,data:OVgTjcJ3qk8cgHurth92EAYIsDy/cz2rsXpEHze2obbljlIJcVBFxXB6qTCSeBVdYADX/wv1jnlETr9+AB133UEahgWQuVoeI0NG7UTCyXg=,iv:yLt6Eq5/g74UUePr5j1YI4vkbQZB0vZJ8g8lgdIJPFQ=,tag:7NhHNB4TVbDFYOkVKl4nDQ==,type:comment]
-    #ENC[AES256_GCM,data:UMv9pp2jtto1pkpX/swU6c7WMiNz0lIwWFz92z/8WbmMfpz6jTV5zyVF+rWQFOV1DTvwR8H7,iv:LV1NaDW27NRg3LrT5oGz0Up+8JAxi/RbzfUR7CbZoFw=,tag:1j5Osb0LxNW+G2F+oA7zXg==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:C04zeOx8/5sNFIIh,iv:zcD7qtwDbgxzyYZnvo4gu6izxuIpQ1h1gWfZVS5VuI4=,tag:fbZ/qT0BNFKrsw+PLGa0YA==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:pxmjjWDRfMfPcvgQxWkIyoM=,iv:+ZpXoMsUleBO+LBebnYh09ycyxyOZkP7jXJTaHOhRnE=,tag:j7R/ryHgLvwhS6zk06xrDQ==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:hl+tmDgDTAIrmIL1TLpfQrMhu2heMDYA8zmqYl1UqZ4=,iv:pSrmd9h48jAxbmub3nidzmBxdfgsqmw8aVZ67bgzPEc=,tag:wa/oefKMxqYWpCZpK8iqYw==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:6UpFI1pNks33GghtHsWvcseknfewxwYow0JDcAjzxw6DN65oTqxBxA==,iv:twULx+tAkxCFLwNmzMDoHXMuR8M8bKfuppx5wH40ylU=,tag:fHUkJbbZBA9JHvtfBMAnPg==,type:str]
-    #ENC[AES256_GCM,data:+OWE5FKrtzuWgvTLXVNob7HwU//tHNcEWEwQwqYLfRCNmXcWXtURsZEQQXfCozGh3TdJzxYNiBKItWOJ1geK/A==,iv:gtxDy8xYrp+QF1TLRC9EAmByW5ppuumznrUkmgrJqtg=,tag:PQJB4x2fQv6iYMl3UzWRnA==,type:comment]
-    #ENC[AES256_GCM,data:542b8rNov8MCfb7X0PcInYEyRIrAWtKXPC2ZIhbiPIpRnMl0kFs4KeZYrJLY17Q0/GipE6kaug0=,iv:60Pisq8Q/grPvE9vjyCSlty9VAo8YJjgICz+3hC6Wiw=,tag:7yLxQm7HlN7RxSSj/1IruA==,type:comment]
-    #ENC[AES256_GCM,data:vVemXhmZDGZCDhxivpbvIBjIhH0p6lgTsA==,iv:rROFB0BJL/6jhTQALlqDDVlWt3L5WfeiPV6u9m+t16U=,tag:rvJtdGUh2PPWvD4LC2aSYA==,type:comment]
-    #ENC[AES256_GCM,data:zNqTwKYSd/qrTLencw3UNdQuLpL4r+RtgBMqv9R6K19/PcpjAWatP/+LUrqUI9VMs1xeFbnttrGg3RJPIXSTkPWbA5I6dQX9LTGXFCA=,iv:PMfkwqU2ABhxznD6Ka/YQFmgTqzmFUbB/Pj7pGK9f8c=,tag:FkogHHiXYGbzfM1A/Ruf6Q==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:/g4Ob+LW4ZAZOQVicNd9K2yTRX/tlz5bI9sGdzXGrmoOPVlU0yjQC13cNDqnACAv,iv:NzeeETj3h6yIHb9O+p95kyINsYMGoDGhn/LrV8LkVD8=,tag:EIILUT/012d+60DvAhI0Lg==,type:str]
-    #ENC[AES256_GCM,data:cCr19LXkNQvceWAnmLtlv25f/a8s3ygktoZACvcyUUlWK65QAJYKCrtLiVTHkBWLf4jM3YKwkRWcqnY+nbg293Y1SCZLhh4=,iv:7Mv5jAdKwwT6no3nl2mHiQbmPKXlFFig2Fe/YTINreQ=,tag:v2URGIbeh+M04/PHdeqCuA==,type:comment]
-    #ENC[AES256_GCM,data:u+VdAek9waBGInCy2cu2hxFwQmpO/MylieJiqrjwFFO9VUHqWrpFv7oWLsgSG6ypLzZnKoXH,iv:OGNygKmQOdECMtcz1lEO1mNryGjgBuEyNvywpj/hkxQ=,tag:fpq2YGqDiGogB+735dTvug==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:coxDjM+1kA==,iv:u1Fu9UHHyWNUE1tDB9oDNUiFWx7Gk6lyj+dfwGAsYA8=,tag:jGzwphdlpr53/2pTz1Pwfg==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:neIUcmd8V7UEoYXbBxf1IQPCT+Y=,iv:xJcx0WCzBP3lBT7xjypkYOGfikS/C7lx6jrWH6WNAj4=,tag:YsomXDNcxn4HzhOPXzvimg==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:DnFEEWUMbRhpr54=,iv:WpBTavzYDjWJjGg1HYOpb3youqkJVfDQ8CuWXFBwS54=,tag:bMQV3T3i/FIjYFiMWA793A==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:YJppPBUeZMDY9oGnpg2i,iv:HkQ1iEF5kP8nos2DFrwry7nismMl5hwjMcohqNZ31Vg=,tag:IX151XiwTyLfAi15mXcC7g==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:DHB3NtuHs5w7VoAMfiBQb3gIo6WcIOO7Bw==,iv:Xwrq8A809hWj7UhuPeZyeK+a6RLHG4M7JHqthuDzQgI=,tag:FPePumZY+XB5Is2v7xRzww==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:cDoHUe55NuvG3HmEvOpqBFTNsvloEBmT,iv:X8bmAPyqGX0k7JDXah89coywdh1BnExVz9WWJEMBpG4=,tag:XhqER9H9aOOfqcGJlYIhGg==,type:str]
-    #ENC[AES256_GCM,data:QOZxJbokSrDcF4DEmUk=,iv:M/Rexc1OqayfG3ihgOfIhhh7XvpUU3sqdBZALbIbHig=,tag:W1neottOe0MAeyxmFNLy8g==,type:comment]
-    PODNET: ENC[AES256_GCM,data:OVOuWiMIaROZJxWvNw==,iv:AZ2gTuqgO5HG/XodPy8AIUjKacBJ7+B1o75H2gIyAyk=,tag:Z30okLaCz7s92LRDIxg6ZQ==,type:str]
-    SVCNET: ENC[AES256_GCM,data:i7b9DWPDxRBxKcqu6g==,iv:P/J3Tz+rVNuTq/6AAV/klI5BAEJYH9nxxua7hi8DiNI=,tag:nlMEb3Nbn/ut2342vdaUCg==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:jZi2bg==,iv:3peNWxM8UxHGKlybxSliFYRth5G/nP/xUJCa0b+61g8=,tag:yf6ObdQXpWjKQBsqQFWvzQ==,type:str]
+    #ENC[AES256_GCM,data:Ut3IBt/WidD+j8/m84De4sY7EcMrZzh38NFNfBe4u6AtXbYw7AE3HoZBW50Q0ORX9azWblZWZbdoGoMcfGl5ElM=,iv:bzzqBA7/0XxSt6OkcajaMuSWcDGIlwJFdT49GgvAm5c=,tag:0HY6Zbs9oGtZOFFbbVdgJQ==,type:comment]
+    #ENC[AES256_GCM,data:N2bRA8jH00LiTr2cRbgEsIeNKtPY23Ek3NT0VCycJnRGsWJ1tIPO+gHjNCw=,iv:ULJm1GfR829O7IGH44ifBTRMgHoBn0CJFYdev+pT/3o=,tag:OFZ2Fi9PSFKdmkssmoqm5Q==,type:comment]
+    VIP: ENC[AES256_GCM,data:RnbXJG84MKFJAc11vw==,iv:H9gMLDXszZkcBSuL6VdKSTUPqdVvfL2PkybM5XGz6Fs=,tag:kQ9ggCiS84O0bw9gNVNUEw==,type:str]
+    #ENC[AES256_GCM,data:QTgOwFptAhfiga1T437ES8UzzHqMiZtfyWhL,iv:B25SHCQaUi6lcUKfM9XudxFruVu98876dOqnlduSAFM=,tag:3dQhvTdAP1L7e/XRQaBv2w==,type:comment]
+    #ENC[AES256_GCM,data:CpnhReFcBoJnkcWvoputzWm+BIt44Vdt3EHvjRXQ/DkSIOms1cPoTl/oY2eeIEZSdyChjtFKi5s4jSkmqIUcssYLOoLVDOFPSMxu65gTaNDSjK9K5d4CRVA=,iv:USODWW/tpleh0OqPfrqtUus/rMIQPpKji/gLAM7G2os=,tag:J1Qz3/6N27DKqRwE6jq5oQ==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:0/6Ao2FKpccgkTGa36A=,iv:P2gQgs/QG77Sy6kdyYRrSDqosG0q9zJT22ru0nyDIQo=,tag:UcNJktPWMJW3KfBzXk3P2g==,type:str]
+    #ENC[AES256_GCM,data:9MJ7mXZfJNJYEStyt0qXLxEygw3r2QJp3PmCua92t5Kdpg==,iv:lTAh/AbtYIHnpw4b9g/yqTedf//1PBeMk+k/hSmwLns=,tag:WUbh+FdbF6nHpocmLUrXJQ==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:YgIh+e4LJWiXFVt15w==,iv:GI+zj031OtaeOkrOaeg8+DOchUdC4DDzDS5bhz6gOZg=,tag:0EORANgsXRqbbSMnWLPWdQ==,type:str]
+    #ENC[AES256_GCM,data:eWjqzjsmYNYURhuIHy+WT530p8ypAv5KMoU52U/Pa/nWFrIHhGlSh4V/zuGxP+0=,iv:n0Z0BtbEA57PQn1kwPpJM9Ow8eFL4r2vq4PT5IFOTz8=,tag:m5cbo5X2xPK+8Hj9mGa8Pg==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:y2qnRKSEja6g3xz0kPMtRH0568LY1fp392pQ1RTgiA==,iv:KvvWXZ0VWQAp1UMrPwjmXyCW0Y3uStXZje0h/vAvQxo=,tag:HBt2+MHbb5FVZtqcOxHKRg==,type:str]
+    #ENC[AES256_GCM,data:BBwQ/oeIsstTMI2iFvgI+X+a9ZaKkSMW4IM3MMob9G4RXvKkgEa0y91PzXgi+7N6FEe8O0kDsnpwcEjNCzaJPS4ltGPqQ7cjplGG/I+vU6EqTQ==,iv:tAPVBqDJuY5Ierw0Tt3ZIRioVDGQ+FWpdVvdnbd9Mvc=,tag:9Blzsby1i+hj04jSG8qxKw==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:ryllbK1wW58gEtpjSMYC,iv:ihIh3AI+yWVTizBoiAM6qHe+tbJwfuwuYjcsdljaiJ0=,tag:iwg0tfRA+Aqii19/OjkSOQ==,type:str]
+    #ENC[AES256_GCM,data:nnNAFy8AWZZ4Z6Ueh2iVtCnFxRt/WOPuBeYejHtWgjsG,iv:CpQvZdXZGXmKGORbnwCLSX+UGv852DyzN4Kp1jQGhpk=,tag:8QruvhJjryCpRqtuwFShjA==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:OnN0lT/xABdXe7XaydO8,iv:jmll+1iIrbbJF8gsbwUzNH8znparJDkYeAZl7z1AFWA=,tag:VJG2WtiRoZJ8igEezC+Ing==,type:str]
+    #ENC[AES256_GCM,data:003EbQVUhjfLVWpJilT7uVtsWGYYbVkq2DwyYVSqvm0bRUeV5APBKTUlaa8QDIyukbREWtNwmgb76fXhfx+8gTYNwzaXm36exZAOSQPKwLQ=,iv:9lqA4/yqXAkknCeQxH0KF1E4zyQgH2Tndb7pkEmwb4k=,tag:7ZqEJyOmQ9x9XT7G8igoYQ==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:o2SjFITSwYpNRnG4N94f,iv:xn5rkxAyy9pmi7sH920laoEIqEA2UoNvG44YeSF/dPU=,tag:DTUTX7wNvb4A0S5oqaix3g==,type:str]
+    #ENC[AES256_GCM,data:aHPFJeIseXQKFQiw9tq2YHZk4I4Qr0fS26yujKTFYIq7oXV7hSu8E5iwvp7p7/+Heqhc2jK1ZrvCo9TMgRxLnXXEmMM4a2h3eoyB0JHC5GIpWtIr80Mh,iv:wrhTJoHRL1pzS3ChZTrggXoUdjcvBnlsoqV3aKenXzI=,tag:9v4RCTpu+97OBiqzO6N6vw==,type:comment]
+    #ENC[AES256_GCM,data:dE4s6din3tJCg9bwT9k8AIF1S3Lv7SdQa9EGr0HaNrNHJIh9Cq/gLN8+YAXZxOEWyUXVNwvtbf64cb0KFE/msBBY18jCSRFxl+gRR8B2zQpHNGO0zd8B3djWmFvvoi8P0Hti1qGUSj20KbPG7FZmjLMQTdHjbf5r7HYgKQ==,iv:Qw+lXYXhWzB7VxN9cfEaLnSpvrps9MyieAXyF3U+gYo=,tag:MBrkPKGiqtFqFG5tGZ0xmg==,type:comment]
+    #ENC[AES256_GCM,data:nX1F9ggwRA3mKcJKXs1fBWaoPA6lYtWsTtZTO/I8MjvluZEYMS61Y06BsuD061elJhwsn/Ud1ayCqaCoM4vAZinxpCP8FNC/sHYnf1Xthrk=,iv:N//iuBsyg9Vo0OgNC3+6ya6M1FhatOqWeeN2X2hB6Ow=,tag:h0eKtf53mAums/Cf9huUug==,type:comment]
+    #ENC[AES256_GCM,data:fv3s/g/qMcAlW9Zzg0NCu+bp2MEmvfRfNI/mUVQkFMsF4c11MyaLe9vY4ZKnwuIrd1ZAlZXY,iv:k8y8XIqDd5P86FBod9LEqwhJAw8j6OEeWcqFNz5zEKw=,tag:JgCuZ0QOaT6hppUBB9NDDw==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:UHe5Q/ZnvuKb3nUQ,iv:Es9vc4aNqPI+nGf5yJFAvkpx6w7MNtA6Y4HvjLzpH84=,tag:Ww4Wm1sQFHvA3R5lg98gnA==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:mjuKHM40LoPUeLVI94z/nA8=,iv:QdpgYJWoZPA/5sFofLzeHVd9ynQr2wQcJimBg9WTQms=,tag:TwRVq/vqMAul9B4Uh+72VA==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:ENO5tQLwXTb38sxzhARvtvZcNiBLxdz1udd3LSxeiGE=,iv:uhB5eGo5todmEdtMI6VfkgmvONcJJOGV+TpQYYoHXr8=,tag:ySWt48dMlHmz7KxphApCNA==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:7/E60T4FUZI0EwyYnwrc53G56HSl3LmKR/0Xq7q3U4fhAqKLYvXnsw==,iv:KMHfAih7wvE6TBc1bDbVbgF09CSCEspFg/PCTZiCOAg=,tag:Tlp3Ic4QYtzMITOSnveMjg==,type:str]
+    #ENC[AES256_GCM,data:3OG8dSFoGvZANMIdEip42lb+Yf1/BsS3LhP88IesZgbQ6u8/27n1VQyYCR4w4juxBdHZ3+IRsXrJkm1saXwrRQ==,iv:ps/0o9EmyosxRK/JwcC8NKIdm2Qq7WkDCnqWAhkwcVo=,tag:LI2FiFxpKSCfLPzwdxQrGw==,type:comment]
+    #ENC[AES256_GCM,data:yN+3ADURP6sSv2VxtM1PGeFF9BozbjKHnbWDEw8f4yv9CUM0jxIn/6poOsT1fFGLAZY0hc2/tLk=,iv:URegr0gZIl7jI5Gy7SLsLkWUCwiuHxz3mvXcN0BWxvs=,tag:6wSEZPxB9Ca7CS1MExONWQ==,type:comment]
+    #ENC[AES256_GCM,data:U9SltnWrBT77NYgknstrcntDuqCFpqieVw==,iv:NGIQQY2d/CvHQPwMARUKplGr5Ib3X53j2OAJnvy5cFE=,tag:DAMy2DZXtYm+Vb7hZB13xw==,type:comment]
+    #ENC[AES256_GCM,data:wDZ3uVblJ5oKTnrS38SEpmg/Y3AYFTkGIzdWmRsTr5LqKp0EfKL6eJ+64tTWdRGoqruJ/0SuuBH93P5oKCyc5gaR+/9sEwSpmFhX6YU=,iv:9uKDZ66VJoLGJSsfFJk88OdRh7Lfz5OoVdadewDuN60=,tag:4VkYu7BSr9SjTiyajLk0bw==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:YpR7IlHii+HOsCeG3Swdgzw9nmQQBqosGHxo9INexxPCySANGLv6siVuLyiaj90/,iv:vg7hLPMiFmt5atGxByX1aq2HG7lHzbAzPsi97eUKXho=,tag:6a5HB42DqeFAax/W2WvNpA==,type:str]
+    #ENC[AES256_GCM,data:EAgmD8ADqJgpYUTFAf5j0HOB+jchD6OqVSy0UgpR/pa+fZ9eIjFyC4uhIKQZwgNEo5F4ForppA68wIhzgd6AwO8l3w7mm7g=,iv:zhtR1p5qAQhdgt92tviRdaRllzEBpYGZVdXVPcqjTF0=,tag:C9OHExuFmPFJyRqvqZh14w==,type:comment]
+    #ENC[AES256_GCM,data:RJ+ViVrjW7a5MeHAq8pAflKpIE2O5Cp05GrG3QD/vS/Ozs/SHdcd+iQeF0J1wTl5qExDdfbZ,iv:Z6o3g21rRjKeFFpWgrTnSdNf/BGJUfJ/uWteZGZtjCE=,tag:0qyVXa157qIpGziLT7FqOg==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:iRdQou6b6g==,iv:1cLLJBlTX933Xcv+lLh01TrUSRmA51XEXLSHy4g+WLE=,tag:Sst4aEHa64L+bXjihjGxjQ==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:QapFfMcpeXfWuR3zbwIrek0AUjo=,iv:RIUwv6RLzNkPsKTUCODd/hw7Pxum3usVHdeOABiOwJM=,tag:BlrAdK0aTq0E1y0FvO6a6Q==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:0V6rFk1FZP6B8Hs=,iv:3sue7HSZZTkQCoidqRPUa8fXGhsnjE1u0dIAK9jJ44s=,tag:+T0Cc6FpnQsxzVatF4amjg==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:fF+teFGoBd3SyGYao955,iv:22aGXZa1H+PbX+gM3tvUaXAw+HC8BUKRgJbFHk04PDg=,tag:Llsjma3Y4ER5pRBm8fIE6g==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:e/ZvbexojOEQWkGXSnOa7ZFMn1Lt/lmFVg==,iv:dZIw6kHBjwtKZpfoM8XGnEr2Qyr/htMN4AfH9qr5lvs=,tag:ZSWc+TsvbAtug+cti3bpRQ==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:JmK5RFLYd67SJeIyQs/mKQG0G0ZXTAT0,iv:YbqXSfmHdXJFs++QOvFZ+7Ja+8g8s8afFa2omCgxDoc=,tag:OOLdK1DVqRezz3z1yR7ZDA==,type:str]
+    #ENC[AES256_GCM,data:k5329RzoBQao+DOC4O4=,iv:YVnWry283+vFU1wmenLPCJJGH3YCGoVsIKYOCxoBxbo=,tag:0vEx341oMvSFeOngzt+GPQ==,type:comment]
+    PODNET: ENC[AES256_GCM,data:1hlK20m9+x6iEwlYSQ==,iv:a44U/cBQyhOKKUXvvpdlnpSyh4ekNU0MWYDQjdxr47g=,tag:fC5k0Je/7Vlm40nX2TKEvQ==,type:str]
+    SVCNET: ENC[AES256_GCM,data:pKZeLJhtvGyiy0BEKw==,iv:oeZXm2HRuzXl+vcwbID7logHqvbFN1q6av7WmhsHCvo=,tag:+nVWH72ZuWlRJ4FxF60D4Q==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:++tpjw==,iv:R6HG09jhliV1/JAkp4Iuj/xZQc7lBW90J0A59N0a9Nk=,tag:Rkdd6PqONxym0txVBJ+cFQ==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -55,14 +55,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBsaGtoZHU1N1Q0T2R4ZlAw
-            b2R4ZlRjUWRrbGkrNGhmT09HVnFrczZTNlJVCmdZR05mRStEb2dsekxyS1RoMDZt
-            TUxLN1J2ckordzlrdUJKZXlnSFdxUGcKLS0tIGVIYVIvV2ZkQnUxYUQ3ZFppOU81
-            MGluSmNqS2tVekZXZytOWmFQQWQ0MEUKv4kPZOxUsBnIZSngavaZB5cnE1MJF7Cd
-            exH1Zx9nzL7XTbVoWZgPLvDXJQeXLHWJwQ/euK1EZj+m4ynvXGGhDg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBPVU9VMXdHeFVXS3NKSk11
+            UW5qbkdod3V0ZkcrZk1DcFBzaERVazNKSEI4ClhNN3FFWmhwRU5pNFIrdElPa0pW
+            UHJKRGhKd1psbmp5T2IrSGt6aDhrdVUKLS0tIC8wVnhnc0lUOWx1bm4yRDRLeGo4
+            RncvTFp0bmd3VmhYODdmVU0wcnIxdkEKegN6k4HT2wFitb6ZvuNVeLoyRgeff/El
+            VtQ7iCLIeXIOPbUZHE8VXhh3SPhw1lrBhbI/NxvMdHyPfrOb0knUlA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-08T23:02:40Z"
-    mac: ENC[AES256_GCM,data:K9/0Gnzh5G8mwzy6wTQUjAjx6FI0ujYac2rqxGP5BWRXNyTUKs+U1SJGFIXgT4gy4Qcj2Ss1V1htW/32QpMGRsO+R9HoB6LA22ZlV9dc86AJOiw7+wIrS8TQmhU+XPww0KGXIpGiw/+CzzI/x9PeEiLEcRv/1/K/XEEb1l8AhhM=,iv:nJbcIHD3sjNVwj9WQFncyqhAp4mbtCOGT3bSyqRV5P8=,tag:J7jVj7vuo4CleE+sZckJpg==,type:str]
+    lastmodified: "2025-01-08T23:08:36Z"
+    mac: ENC[AES256_GCM,data:0HmfB6h6ZgTwJmJA5qoDIWgQ3bV/e7H7+Q7gx3UAeEGyzEpyo1sB5ZG+QhOB7ayYwnSUlSQwC3CKTekADaaiuVl+feV6cAH8OraSU2e8EISnBLpNC6IhujxGdBSTL8brOjUjvQvHWWHWKXj7QUUJyCyWTVtGjotqVvlveF2TK3w=,iv:GYFcPACUOz3zeVQxDFSnfPcDUrnDvPI3IunbaqHg3SE=,tag:kEAR2VL3uiUbcYxBa8d30w==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.1
